feat: add tool center CRUD
